<resources>
    <string name="app_name">Experiment2</string>
    <string name="buttun1">1,1</string>
    <string name="buttun2">1,2</string>
    <string name="buttun3">1,3</string>
    <string name="buttun4">1,4</string>
    <string name="buttun5">2,1</string>
    <string name="buttun6">2,2</string>
    <string name="buttun7">2,3</string>
    <string name="buttun8">2,4</string>
    <string name="buttun9">3,1</string>
    <string name="buttun10">3,2</string>
    <string name="buttun11">3,3</string>
    <string name="buttun12">3,4</string>
    <string name="buttun13">4,1</string>
    <string name="buttun14">4,2</string>
    <string name="buttun15">4,3</string>
    <string name="buttun16">4,4</string>
</resources>